--- a/Views/Empleado/Registraremple.cshtml
+++ b/Views/Empleado/Registraremple.cshtml
@@ -34,7 +34,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>DNI</label>
-                    <input type="number" class="form-control" name="DNI" required" placeholder="DNI"><br />
+                    <input type="text" class="form-control" name="DNI" required" placeholder="DNI"><br />
                 </div>
             </div>
 
