--- a/Views/Serie_herramienta/Editarserieher.cshtml
+++ b/Views/Serie_herramienta/Editarserieher.cshtml
@@ -95,7 +95,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>Factura</label><br />
-                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S">
+                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S" required>
                         <option value="">Seleccione una factura</option>
                         @foreach (var iteml in ViewBag.Factura)
                         {
@@ -106,10 +106,11 @@
             </div>
             <br />
 
+
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>Comentario</label>
-                    <textarea type="text" class="form-control" rows="5" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)"></textarea><br />
+                    @Html.TextAreaFor(m => m.COMENTARIO, new { @class = "form-control", rows = 5 })
                 </div>
             </div>
 
