--- a/Views/Serie_herramienta/Registrarserie.cshtml
+++ b/Views/Serie_herramienta/Registrarserie.cshtml
@@ -93,7 +93,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>Factura</label><br />
-                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S">
+                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S" required>
                         <option value="">Seleccione una factura</option>
                         @foreach (var iteml in ViewBag.Factura)
                         {
