--- a/Views/Empleado/Editaremple.cshtml
+++ b/Views/Empleado/Editaremple.cshtml
@@ -36,7 +36,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>DNI</label>
-                    <input type="number" class="form-control" name="DNI" required value="@Html.DisplayTextFor(m=>m.DNI)" /><br />
+                    <input type="text" class="form-control" name="DNI" required value="@Html.DisplayTextFor(m=>m.DNI)" /><br />
                 </div>
             </div>
 
