--- a/Views/Factura/Eliminarfactura.cshtml
+++ b/Views/Factura/Eliminarfactura.cshtml
@@ -4,8 +4,11 @@
     ViewBag.Title = "Eliminarfactura";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <div class="row" style="margin-top:30px">
     @if (ViewBag.ErrorMessage != null)
     {
